Fix some minor alignment issues
Now align the counter to the top (baseline) which will provide a
more-uniform experience. Also, stop forcing the height of .lesson-part
and instead allow the icons, if they take up more than 50% of the
metadata column, to encroach on the counter.

--- a/app/webpacker/styles/_lesson-parts.scss
+++ b/app/webpacker/styles/_lesson-parts.scss
@@ -13,14 +13,13 @@
     display: grid;
     grid-gap: 3rem;
 
-    @supports (display: subgrid) {
-      grid-template-columns: subgrid;
+    grid-template-columns: subgrid;
+
+    @supports not (display: subgrid) {
+      grid-template-columns: 1fr 7fr 2fr;
     }
-    grid-template-columns: 1fr 7fr 2fr;
 
     .metadata {
-      // force the height so
-      height: 22rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -29,7 +28,7 @@
       .counter {
         flex: 1 50%;
         display: flex;
-        align-items: center;
+        align-items: baseline;
 
         @include govuk-font($size: 48, $weight: bold);
         color: govuk-shade(govuk-colour('dark-grey'), 10);
